--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ gems:
 
 # Site owner
 owner:
-  name:
-  email:
+  name: Carles Gutiérrez
+  email: carles.gutierrez@gmail.com
   twitter:
   google:
     ad-client: 
     ad-slot: 
   bio: 
-  avatar: bio-photo.jpg # 160x160 px image for author byline
+  avatar: carlesGutierrez.jpg # 160x160 px image for author byline
 disqus-shortname:
 
 
