--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site wide configuration
 
-title:
-description:
-logo: # 120x120 px default image used for Twitter summary card
-teaser: # 400x250 px default teaser image used in image archive grid
-locale:
+title:  Cargles Gutiérrez Vallès
+description: noticias, talleres, experimentaciones, acciones, trabajos y proyectos.
+logo: carlesGutierrez.jpg# 120x120 px default image used for Twitter summary card
+teaser: pajaroGutierrez.png# 400x250 px default teaser image used in image archive grid
+locale: Spain
 url:
 
 # Jekyll configuration
@@ -29,7 +29,7 @@ owner:
     ad-slot: 
   bio: 
   avatar: carlesGutierrez.jpg # 160x160 px image for author byline
-disqus-shortname:
+disqus-shortname: Carles
 
 
 exclude: ["lib", "config.rb", ".sass-cache", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "*.sublime-project", "*.sublime-workspace", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "node_modules", "Gruntfile.js", "package.json"]
