--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "noticias, talleres, experimentaciones, acciones, trabajos y proyec
 logo: carlesGutierrez.jpg# 120x120 px default image used for Twitter summary card
 teaser: pajaroGutierrez.png# 400x250 px default teaser image used in image archive grid
 locale: Spain
-url: http://localhost:4000
+url: http://carlesgutierrez.github.io/
 
 # Jekyll configuration
 
