imgages cooments posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site wide configuration
 
-title:  Cargles Gutiérrez Vallès
-description: "noticias, talleres, experimentaciones, acciones, trabajos y proyectos."
-logo: carlesGutierrez.jpg# 120x120 px default image used for Twitter summary card
-teaser: pajaroGutierrez.png# 400x250 px default teaser image used in image archive grid
+title:  Carles Gutiérrez
+description: "Noticias, talleres, experimentaciones, acciones, trabajos y proyectos"
+logo: carlesGutierrez.jpg
+teaser: photoProfile.jpg
 locale: Spain
-url: http://carlesgutierrez.github.io/
+url: 
 
 # Jekyll configuration
 
