--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
 title:  Carles Gutiérrez
-description: "Noticias, talleres, experimentaciones, acciones, trabajos y proyectos"
+description: "mediaArt, code, retail, workshops"
 logo: carlesGutierrez.jpg
 teaser: 
 locale: Spain
